changed to relative. fixed on desktop for centering logo.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -60,3 +60,13 @@
  * @import "utilities/background-patterns";
  * @import "utilities/skew-transforms";
  */
+
+.logoimg {
+  height: 100px;
+  width: 100px;
+  position: absolute;
+  left: 50%;
+  margin-left: -50px;
+  top: 50%;
+  margin-top: -50px;
+}
